--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="E:/JavaLibs/twitter4j-appengine-4.0.4.jar"/>
+	<classpathentry kind="lib" path="E:/JavaLibs/twitter4j-async-4.0.4.jar"/>
+	<classpathentry kind="lib" path="E:/JavaLibs/twitter4j-core-4.0.4.jar"/>
+	<classpathentry kind="lib" path="E:/JavaLibs/twitter4j-examples-4.0.4.jar"/>
+	<classpathentry kind="lib" path="E:/JavaLibs/twitter4j-media-support-4.0.4.jar"/>
+	<classpathentry kind="lib" path="E:/JavaLibs/twitter4j-stream-4.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
